# lesson10_1

./: .coverage  .env.example  .gitignore  README.md  main.py  mylog.txt  pyproject.toml
src/: decorators.py  generators.py  logger.py  masks.py  processing.py  transaction_processing.py  transactions_extentions.py  utils.py  widget.py
tests/: main.py  mylog.txt  test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_transactions_extenstions.py  test_utils.py  test_widget.py
