[tool.poetry]
name = "lesson10-1"
version = "0.1.0"
description = ""
authors = ["sapphir0v <6.sapphirov.6@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.0.0"
black = "^24.4.2"
mypy = "^1.10.0"
isort = "^5.13.2"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
logging = "^0.4.9.6"
pandas = "^2.2.2"
openpyxl = "^3.1.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true

[tool.black]
line-length = 119

[tool.isort]
line_length = 119